--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vidly_website",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^6.10.0",
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
+    "express": "^4.18.2",
+    "fawn": "^2.1.5",
+    "joi": "^13.7.0",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "loadash": "^1.0.0",
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.20",
     "npm": "^5.5.1",
-    "underscore": "^1.13.6"
+    "underscore": "^1.4.0"
   }
 }
